--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,7 +29,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build
+        pip install build pytest pytest-asyncio
+    - name: Run tests
+      run: pytest tests/
     - name: Build package
       run: python -m build
     - name: Publish package
