--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build pytest pytest-asyncio
+        pip install build pytest pytest-asyncio requests
     - name: Run tests
       run: pytest tests/
     - name: Build package
