--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -33,7 +33,7 @@ jobs:
       run: python -m build
 
     - name: Publish package to PyPI
-      uses: pypa/gh-action-pypi-publish@2.0.1
+      uses: pypa/gh-action-pypi-publish@v1.8.11
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
