--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,7 +24,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install . pytest pytest-asyncio requests
+        pip install -r requirements.txt 
+        pip install . pytest pytest-asyncio requests httpx
 
     - name: Run tests
       run: pytest tests/
