--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt 
-        pip install . pytest pytest-asyncio requests httpx
+        pip install build pytest pytest-asyncio requests httpx
 
     - name: Run tests
       run: pytest tests/
