--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install -U pkginfo twine
         pip install -r requirements.txt 
         pip install build pytest pytest-asyncio requests httpx
 
