--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,11 +10,11 @@ permissions:
 
 jobs:
   deploy:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v3
@@ -24,17 +24,18 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -U pkginfo twine
-        pip install -r requirements.txt 
-        pip install build pytest pytest-asyncio requests httpx
+        pip install build pytest pytest-asyncio requests .
 
     - name: Run tests
       run: pytest tests/
 
+    - name: Clean previous builds
+      run: rm -rf build dist *.egg-info
+
     - name: Build package
       run: python -m build
 
-    - name: Publish package to PyPI
+    - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@v1.8.11
       with:
         user: __token__
