--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build pytest pytest-asyncio requests .
+        pip install build pytest pytest-asyncio requests httpx .
 
     - name: Run tests
       run: pytest tests/
